<resources>
    <string name="app_name">BkbControl</string>
    <string name="team_a">Team A</string>
    <string name="_3_puntos">+3 puntos</string>
    <string name="_2_puntos">+2 puntos</string>
    <string name="_1_punto">+1 punto</string>
    <string name="team_b">Team B</string>
    <string name="action_reset">Reset</string>
    <string name="terminar_juego">Terminar juego</string>
    <string name="equipo_izq">Equipo izq</string>
    <string name="equipo_der">Equipo der</string>
    <string name="fecha">Fecha:</string>
    <string name="hora">Hora:</string>
    <string name="visitante">Visitante</string>
    <string name="local">Local</string>
    <string name="ingresa_el_nombre_del_equipo">Ingresa el nombre del equipo</string>
    <string name="nombre_del_equipo">Nombre del equipo</string>
    <string name="a_jugar">A jugar!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="xx_xx_xx">xx/xx/xx</string>
    <string name="xx_xx">xx:xx</string>
    <string name="ganador">Ganador</string>
</resources>
