<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewmodel"
                type="com.avgh.bkbcontrol.viewmodel.ViewModel" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".activities.MainActivity">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/small_gap"
                android:layout_weight="1">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/medium_gap"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/team_a"
                        android:id="@+id/tv_teamA"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/tv_score_team_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_gap"
                        android:gravity="center"
                        android:text="@{viewmodel.scoreTeamA}"
                        android:textSize="@dimen/big_text" />


                <Button
                        android:id="@+id/bt_team_a_3_p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_gap"
                        android:onClick="addThreeTeamA"
                        android:text="@string/_3_puntos" />

                <Button
                        android:id="@+id/bt_team_a_2_p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_gap"
                        android:onClick="addTwoTeamA"
                        android:text="@string/_2_puntos" />

                <Button
                        android:id="@+id/bt_team_a_free_throw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_gap"
                        android:onClick="addOneTeamA"
                        android:text="@string/_1_punto" />

            </LinearLayout>

            <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/medium_gap"
                    android:layout_marginTop="@dimen/medium_gap"
                    android:layout_marginRight="@dimen/medium_gap"
                    android:background="#D8D4D4" />

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/medium_gap"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/team_b"
                        android:id="@+id/tv_teamB"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/tv_score_team_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_gap"
                        android:gravity="center"
                        android:text="@{viewmodel.scoreTeamB}"
                        android:textSize="@dimen/big_text" />

                <Button
                        android:id="@+id/bt_team_b_3_p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_gap"
                        android:onClick="addThreeTeamB"
                        android:text="@string/_3_puntos" />

                <Button
                        android:id="@+id/bt_team_b_2_p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_gap"
                        android:onClick="addTwoTeamB"
                        android:text="@string/_2_puntos" />

                <Button
                        android:id="@+id/bt_team_b_free_throw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_gap"
                        android:onClick="addOneTeamB"
                        android:text="@string/_1_punto" />

            </LinearLayout>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
                android:id="@+id/bt_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/medium_gap"
                android:layout_marginBottom="@dimen/medium_gap"
                android:onClick="resetScores"
                android:text="@string/action_reset" />
        <Button
                android:id="@+id/bt_finishgame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/medium_gap"
                android:layout_marginBottom="@dimen/medium_gap"
                android:text="@string/terminar_juego" />

    </LinearLayout>

    </LinearLayout>
</layout>